<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/jungleBattlePic"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:contentDescription="@string/jungle_opponent" />

    <TextView
        android:id="@+id/opponentDescriptionJungle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/healthwarningJungleBattle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lastMoveJungle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/opponentHPJungle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/playerHPJungleBattle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/movesradioJungle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/attackradioJungle">

        <RadioButton
            android:id="@+id/attackradioJungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attack" />

        <RadioButton
            android:id="@+id/defendradioJungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defend" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specials" />

    <RadioGroup
        android:id="@+id/specialGroupJungle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/healradioJungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/fireballradioJungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/shieldradioJungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/doubleshotradioJungle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/makeMoveJungleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_move" />

    <Button
        android:id="@+id/tryrunButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_to_run_away" />
</LinearLayout>