<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/hubDisplay"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/innDisplay"
        android:layout_width="match_parent"
        android:layout_height="38dp" />

    <TextView
        android:id="@+id/treasuresHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dayssinceHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/goldHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/playerHPHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specials" />

    <TextView
        android:id="@+id/healHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/fireballHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/shieldHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/doubleshotHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/exploreJungle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore_chaos_jungle" />

    <Button
        android:id="@+id/goToInn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_the_inn" />

    <View
        android:id="@+id/view12"
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/quitGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_game" />

</LinearLayout>